# PlusPlusTrader

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT_LOG.md  Dockerfile  GitHub上传指南.md  INSTALL.md  LICENSE  Makefile  README.md  README_ENHANCED.md  README_TEST.md  RELEASE_ANNOUNCEMENT.md  RELEASE_CHECKLIST.md  TODO.md  docker-compose.yml  install.sh  performance_optimization_report.md  performance_test.py  performance_validation_report.md  performance_validation_simple.py  performance_validation_test.py  quick_start.sh  release_validation_report.md  requirements-dev.txt  requirements.txt  run_all_tests.sh  test_backtest  test_backtest.cpp  test_complete_python_module.py  test_core.cpp  test_enhanced_indicators.cpp  test_final_integration.py  test_final_validation.py  test_fixed_integration.py  test_import.py  test_integration_python_backtest.cpp  test_performance_optimization.py  test_python_custom_indicator.cpp  (+13 more)
configs/: trading_config.yaml
daily_logs/: 2026-03-15.md  2026-03-16.md
docs/: API_REFERENCE.md  A股数据回测指南.md  INSTALLATION_GUIDE.md  Python_Custom_Indicators_Guide.md  TUTORIAL.md  User_Feedback_System_Guide.md  config_format_design.md  cpp_python_interface_design.md  data_storage_design.md  python_binding.md  文档完善总结.md
examples/: basic_backtest.py  custom_indicator_demo.py  feedback_system_example.py  live_trading_simulation.py  multi_strategy_portfolio.py  simple_trading_example.py  threadpool_demo.cpp
include/custom/: PythonIndicatorBridge.h
include/pplustrader/core/: types.h
python/: README.md  custom_indicator.py  custom_indicator_examples.py  custom_indicator_utils.py  optimized_indicator.py  requirements.txt  setup.py  user_feedback_system.py
python/bindings/: CMakeLists.txt  main.cpp  main_complete.cpp  main_minimal.cpp  main_simple.cpp  main_simple_complete.cpp
python/examples/: advanced_backtest.py  backtest_example.py  historical_data_example.py  integrated_backtest_example.py  simple_strategy.py
python/pplustrader/: __init__.py  backtest.py  data.py  exchange.py  risk.py  strategies.py
scripts/: README.md  download_a_shares.py  example_stocks.txt  package_release.sh
scripts/tools/: create_release.py
src/: CMakeLists.txt
src/backtest/: BacktestEngine.cpp  BacktestEngine.h  BacktestResult.cpp  BacktestResult.h  ParallelBacktestEngine.cpp  ParallelBacktestEngine.h  SimulatedExchange.cpp  SimulatedExchange.h  StatisticsCalculator.cpp  StatisticsCalculator.h
src/core/: BaseStrategy.cpp  BaseStrategy.h  Engine.cpp  Engine.h  ThreadPool.cpp  ThreadPool.h
src/custom/: PythonIndicatorBridge.cpp
src/example/: SimpleStrategy.cpp  main.cpp
src/exchange/: Exchange.cpp  Exchange.h
src/indicators/: ATR.h  BB.cpp  BB.h  EnhancedIndicator.cpp  EnhancedIndicator.h  EnhancedMA.h  Indicator.cpp  Indicator.h  IndicatorFactory.h  KDJ.cpp  KDJ.h  MA.cpp  MA.h  MACD.cpp  MACD.h  MFI.cpp  MFI.h  RSI.cpp  RSI.h
src/risk/: PositionSizing.cpp  PositionSizing.h  RiskManager.cpp  RiskManager.h  StopLossTakeProfit.cpp  StopLossTakeProfit.h
src/strategies/: MACrossStrategy.h
src/test/: TestUtils.h  test_backtest_stats.cpp  test_backtest_units.cpp  test_indicators.cpp  test_mfi.cpp  test_parallel_backtest.cpp
test_feedback_data/: feedback_log.txt
web/: Lightweight_Charts_集成报告.md  README.md  Web服务问题诊断报告.md  app.py  simple_app.py  simple_app_fixed.py  simple_app_fixed2.py  simple_web.py  start.sh  start_test.sh  start_web.sh  start_web_improved.sh  start_web_old.sh  访问指南.md
web/templates/: charts.html
